--- a/plugin/lib/dialog/style.css
+++ b/plugin/lib/dialog/style.css
@@ -114,21 +114,18 @@ body {
   margin-right: 6px;
 }
 
-.platform-darwin .title-left,
-.platform-linux .title-left {
+.platform-darwin .title-left {
   display: flex;
   align-items: center;
   justify-content: center
 }
 
-/* macOS 和 Linux 样式 */
-.platform-darwin .title-bar,
-.platform-linux .title-bar {
+/* macOS 样式 */
+.platform-darwin .title-bar {
   border-bottom: 1px solid var(--border-color);
 }
 
-.platform-darwin .close-btn,
-.platform-linux .close-btn {
+.platform-darwin .close-btn {
   position: absolute;
   left: 8px;
   top: 7px;
@@ -145,9 +142,7 @@ body {
 }
 
 .platform-darwin .close-btn::before,
-.platform-darwin .close-btn::after,
-.platform-linux .close-btn::before,
-.platform-linux .close-btn::after {
+.platform-darwin .close-btn::after {
   content: "";
   position: absolute;
   width: 8px;
@@ -158,25 +153,20 @@ body {
   transition: opacity 0.2s;
 }
 
-.platform-darwin .close-btn::before,
-.platform-linux .close-btn::before {
+.platform-darwin .close-btn::before {
   transform: rotate(45deg);
 }
 
-.platform-darwin .close-btn::after,
-.platform-linux .close-btn::after {
+.platform-darwin .close-btn::after {
   transform: rotate(-45deg);
 }
 
-.platform-darwin .close-btn:hover,
-.platform-linux .close-btn:hover {
+.platform-darwin .close-btn:hover {
   background-color: var(--mac-close-btn);
 }
 
 .platform-darwin .close-btn:hover::before,
-.platform-darwin .close-btn:hover::after,
-.platform-linux .close-btn:hover::before,
-.platform-linux .close-btn:hover::after {
+.platform-darwin .close-btn:hover::after {
   opacity: 1;
 }
 
