可视化编排添加命令配置功能

--- a/src/css/composer.css
+++ b/src/css/composer.css
@@ -25,6 +25,10 @@
   font-size: 12px;
 }
 
+.command-composer .q-field--filled.q-select--with-chips .q-field__control .q-chip {
+  margin: 0 4px;
+}
+
 /* 输入框图标大小 */
 .command-composer .q-field--filled .q-field__control .q-icon {
   font-size: 18px;
