--- a/src/css/app.css
+++ b/src/css/app.css
@@ -255,6 +255,7 @@ body.body--dark.glass-effect-menu .q-menu {
   font-size: 12px;
 }
 
+.q-tab-panels,
 .body--dark .q-tab-panels {
   background-color: transparent;
 }
