修复进度条高度在增长后无法正常恢复的BUG

--- a/plugin/lib/dialog/style.css
+++ b/plugin/lib/dialog/style.css
@@ -606,6 +606,7 @@ textarea:focus {
   padding-right: 2px;
   width: calc(100% - 15px);
   box-sizing: border-box;
+  /* 290 - 40 的 padding*/
   max-height: 250px;
   -webkit-app-region: no-drag;
 }
